<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general">
        <ListPreference
            android:defaultValue="Linear"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:key="note_style_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_style"
            android:title="@string/chose_note_style" />
        <ListPreference
            android:defaultValue="hh:mm:ss - dd.MM.yy"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:key="time_format_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_time_format"
            android:title="@string/chose_time_format" />

        <Preference
            android:title="@string/remove_ads"
            android:summary="@string/remove_ads_summary"
            android:icon="@drawable/ic_remove_ads"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/theme_settings">
        <ListPreference
            android:defaultValue="main"
            android:entries="@array/choose_theme_array"
            android:entryValues="@array/choose_theme_values"
            android:key="theme_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_theme_style"
            android:title="@string/chose_theme" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/note_text_setting">
        <ListPreference
            android:defaultValue="20"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="title_size_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_title_text_size"
            android:title="@string/title_text_size" />
        <ListPreference
            android:defaultValue="16"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="content_size_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_content_text_size"
            android:title="@string/content_text_size" />
    </PreferenceCategory>

</PreferenceScreen>