<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:id="@+id/share_list"
        android:title="@string/share_list" />

    <item
        android:id="@+id/clear_list"
        android:title="@string/clear_list" />

    <item
        android:id="@+id/delete_list"
        android:title="@string/delete_list" />

    <item
        android:id="@+id/new_item"
        android:title="@string/menu_new_item"
        android:icon="@drawable/ic_new_shop_item_white"
        app:actionLayout="@layout/edit_action_layout"
        android:orderInCategory="1"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/save_item"
        android:title="@string/menu_save_item"
        android:icon="@drawable/ic_save_white"
        android:orderInCategory="2"
        app:showAsAction="always"/>

</menu>