<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        android:orderInCategory="4"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/notes"
        android:icon="@drawable/ic_note"
        android:title="@string/notes"
        android:orderInCategory="2"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/shop_list"
        android:icon="@drawable/ic_shopp"
        android:title="@string/shop_list"
        android:orderInCategory="3"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/new_item"
        android:icon="@drawable/ic_new_4"
        android:title="@string/new_item"
        android:orderInCategory="1"
        app:showAsAction="ifRoom">

    </item>
</menu>